# pi4gpio

./: Cargo.toml  EXCLUSIVE_ACCESS.md  FAULT_INJECTION.md  FEATURE_PRIORITY.md  MIGRATION_PLAN.md  NETWORK_POLICY.md  README.md  SESSION_HANDOFF.md  TEST_PREPARATION_CHECKPOINT.md  VERIFICATION_LOG.md  WEEK09_CUTOVER_20260723.md
.github/workflows/: ci.yml
baselines/: direct_24h_20260723.json  pi4gpio_fd_fix_10min_20260723.json  pi4gpio_initial_10min_20260723.json  pi4gpio_week09_cutover_20260723.json
clients/python/: README.md  pyproject.toml
clients/python/pi4gpio_client/: __init__.py  client.py
clients/python/tests/: test_client_recovery.py  test_client_timeout.py
crates/pi4gpio-daemon/: Cargo.toml
crates/pi4gpio-daemon/src/: client.rs  config.rs  lock.rs  main.rs  protocol.rs  socket.rs
crates/pi4gpio-hw/: Cargo.toml
crates/pi4gpio-hw/examples/: gpio_smoke_test.rs  gpio_watch_smoke_test.rs  i2c_smoke_test.rs  spi_smoke_test.rs  uart_smoke_test.rs
crates/pi4gpio-hw/src/: error.rs  gpio.rs  gpio_watch.rs  i2c.rs  lib.rs  spi.rs  uart.rs
scripts/: analyze_direct_journal.py  canary_compare.py  direct_baseline.sql  fault_injection_systemd.py  migrate_week09_pi4gpio.sh  pi4gpio_sensor_test.py  prepare_test_env.sh  rollback_week09_pi4gpio.sh  run_direct_baseline.py
scripts/tests/: __init__.py  test_analyze_direct_journal.py  test_canary_compare.py  test_fault_injection_systemd.py  test_pi4gpio_sensor_test.py
systemd/: canary-compare.service  pi4gpio.service  sensor-tiered-client-pi4gpio-exclusive.conf  sensor-tiered-client-pi4gpio-staged.conf
